# Pointify

./: .gitignore  README.md
client/: CMakeLists.txt  Makefile  build  build-ubuntu  copycv  copyfreenect  copylib  dependencies
client/include/: cmdlog.h
client/include/opencv2/videoio/: cap_ios.h
client/lib/linux/: libfreenect2.so.0.2.0  libopencv_aruco.so.3.1.0  libopencv_bgsegm.so.3.1.0  libopencv_bioinspired.so.3.1.0  libopencv_calib3d.so.3.1.0  libopencv_ccalib.so.3.1.0  libopencv_datasets.so.3.1.0  libopencv_dnn.so.3.1.0  libopencv_dpm.so.3.1.0  libopencv_face.so.3.1.0  libopencv_features2d.so.3.1.0  libopencv_flann.so.3.1.0  libopencv_fuzzy.so.3.1.0  libopencv_highgui.so.3.1.0  libopencv_line_descriptor.so.3.1.0  libopencv_ml.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_optflow.so.3.1.0  libopencv_photo.so.3.1.0  libopencv_plot.so.3.1.0  libopencv_reg.so.3.1.0  libopencv_rgbd.so.3.1.0  libopencv_saliency.so.3.1.0  libopencv_shape.so.3.1.0  libopencv_stereo.so.3.1.0  libopencv_stitching.so.3.1.0  libopencv_structured_light.so.3.1.0  libopencv_superres.so.3.1.0  libopencv_surface_matching.so.3.1.0  libopencv_text.so.3.1.0  libopencv_tracking.so.3.1.0  libopencv_video.so.3.1.0  libopencv_videoio.so.3.1.0  libopencv_videostab.so.3.1.0  libopencv_xfeatures2d.so.3.1.0  libopencv_ximgproc.so.3.1.0  libopencv_xobjdetect.so.3.1.0  libopencv_xphoto.so.3.1.0
client/src/: calibration.cpp  calibration.hpp  camera.cpp  camera.h  camera.hpp  client.cpp  main.cpp  server.cpp  socket.cpp  socket.hpp
client/test/: test.cpp
kinect_client/: CMakeLists.txt
kinect_client/include/: cmdline.h
kinect_client/include/libfreenect2/: config.h
kinect_client/include/opencv2/: cvconfig.h
kinect_client/src/: calibration.hpp  camera.cpp  client.cpp
kinect_client/test/: run-tests
report/: report.aux  report.out  report.tex  report.toc
report/uml/: client  server
server/: .yo-rc.json  README.md  bower.json  package.json  tsconfig.client.json
server/client/: index.html
server/client/app/: app.constant.js  app.scss  app.ts
server/client/app/main/: main.ts  (+2 more)
server/server/: app.js  routes.js
server/server/api/: recording.model.js  recording.router.js
server/server/config/: express.js  socketio.js
server/server/sockets/: sockets.js
webapp/: bower.json  gulpfile.babel.js  package.json
webapp/client/: index.html
webapp/client/app/: app.scss  app.ts
webapp/server/config/: express.js  socketio.js
webapp/server/sockets/: sockets.js
(+37 files in other folders)
